--- a/static/scss/main/user_profile.scss
+++ b/static/scss/main/user_profile.scss
@@ -3,6 +3,9 @@
     .columns {
         max-width: $site_width;
         @include display_flex;
+        @include mobile_width {
+            display: block;
+        }
     }
 
 
